# task_manager

./: .gitignore  README.md  main.py  pyproject.toml  ram_monitor.py  ram_monitor_gtk.py  ram_monitor_gui.py  ram_monitor_gui.spec  ram_monitor_plan.md  watch.py
docs/: GUI_DESIGN.md  GUI_PLAN.md  NEXT_GEN_UI.md
