[project]
name = "performance"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel",email = "gabrielalmeida9381@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "psutil (>=7.2.2,<8.0.0)",
    "watchdog (>=6.0.0,<7.0.0)"
]

[project.scripts]
monitor = "ram_monitor:main"
watch = "watch:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
